added lang=el to IPA, replace ' (U+0027) with ˈ (U+02C8) primary stress marker in IPA template <Ισραήλ#9654097>

--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -1,7 +1,7 @@
 ==Greek==
 
 ===Pronunciation===
-*{{IPA|[iza'il]}}
+* {{IPA|[izaˈil]|lang=el}}
 
 ===Proper noun===
 {{infl|el|proper noun|g=n|sc=Grek|tr=Israíl}} {{inv}}
@@ -11,8 +11,8 @@
 # The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
 
 ====Related terms====
-*[[Ισραηλινή]]
-*[[Ισραηλινός]]
+* [[Ισραηλινή]]
+* [[Ισραηλινός]]
 
 [[Category:el:Countries]]
 
