--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -7,7 +7,7 @@
 From {{etyl|la}} {{term|multicolor|lang=la}}; see below.
 
 ===Pronunciation===
-* {{IPA|/ˌmʌltıˈkʌlə/}}
+* {{IPA|/ˌmʌltɪˈkʌlə/}}
 
 ===Adjective===
 {{infl|en|adjective}}
