+20th century literary quotation for sense1 <trick out#9657806>

--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -6,6 +6,8 @@
 # {{informal|transitive|of a person or thing}} To [[dress]] or [[decorate]] in an especially [[fancy]], [[elaborate]], or [[excessive]] manner. 
 #* '''1869''', [[w:Mark Twain|Mark Twain]], ''The Innocents Abroad'', ch. 50:
 #*: We went down a flight of fifteen steps below the ground level, and stood in a small chapel '''tricked out''' with tapestry hangings, silver lamps, and oil paintings.
+#* '''1913''', [[w:John Galsworthy|John Galsworthy]], ''The Dark Flower'', ch. 6:
+#*: That stare was as if he saw her—a doll '''tricked out''' in garments labelled soul, spirit, rights, responsibilities, dignity, freedom—all so many words.
 # {{informal|transitive|of a [[motor vehicle]], etc.}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
 #: ''His friends were particularly impressed with the way he '''tricked out''' his scooter.''
 
