replace ' (U+0027) with ˈ (U+02C8) primary stress marker in IPA template <weasel#9662526>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -6,7 +6,7 @@
 {{etyl|enm}} {{term|wesele}}, from {{etyl|ang|en}} {{term|weosule||lang=ang}}, from {{proto|Germanic|wisulon}} (cf. {{etyl|fy|-}} {{term|wezeling||lang=fy}}, {{etyl|nl|-}} {{term|wezel||lang=nl}}, {{etyl|de|-}} {{term|Wiesel||lang=de}}), from {{proto|Indo-European|u̯iselos}} (compare [[Irish]] {{term|fíal}} 'ferret'), from *''u̯is''- 'musk, stink' (compare {{etyl|la|-}} {{term|virus}} 'slimy liquid, mud; stench', {{etyl|sa|-}} {{term|विस्र|tr=visra|lang=sa}} 'musty, smelling of raw meat)'.
 
 ===Pronunciation===
-* {{IPA|/'wiːzəl/}}
+* {{IPA|/ˈwiːzəl/}}
 * {{audio|en-us-weasel.ogg|Audio (US)}}
 * {{rhymes|iːzəl}}
 
