--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -11,6 +11,7 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 {{en-noun}}
 
 # A [[broken]] or [[nonfunctional]] [[device]] that does not [[perform]] its intended function, such as a [[bomb]], or explosive projectile.
+# A [[lottery]] ticket that does not give a payout.
 # {{obsolete}} Clothes, now always used in plural form [[duds]].
 
 ====Translations====
