--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -14,9 +14,8 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 # (''US; modern British & Australian, [[w:Long and short scales|short scale]]'') A [[thousand]] [[trillion]] [[trillion]], a [[billion]] [[billion]] [[billion]]: 1 followed by 27 zeros, 10<sup>27</sup>.
 # (''dated British & Australian, [[w:Long and short scales|long scale]]'') A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
-* ''Western (Arabic) Numeral'' '''octillion''', '''10<sup>27</sup>''' [[w:Long and short scales|short scale]], '''10<sup>48</sup>''' [[w:Long and short scales|long scale]]
-** Previous: [[septillion]]: [[w:Long and short scales|short scale]] 10<sup>24</sup>, [[w:Long and short scales|long scale]] 10<sup>42</sup>
-** Next: [[nonillion]]: [[w:Long and short scales|short scale]] 10<sup>30</sup>, [[w:Long and short scales|long scale]] 10<sup>54</sup>
+====See also====
+* {{qualifier|short and long scale}} '''Previous''': [[septillion]]. '''Next''': [[nonillion]].
 
 ====Synonyms====
 * 10<sup>48</sup>: a [[w:Long and short scales|short scale]] [[quindecillion]]
