iwiki +[[:my:fraction]] <fraction#9665803>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -153,6 +153,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 [[ku:fraction]]
 [[hu:fraction]]
 [[ml:fraction]]
+[[my:fraction]]
 [[ja:fraction]]
 [[oc:fraction]]
 [[pl:fraction]]
