--- a/en/l/Ligurian.741748.wikitext
+++ b/en/l/Ligurian.741748.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|Of or pertaining to Liguria}}
+* Danish: {{t|da|ligurisk}}
 * Italian: {{t+|it|ligure}}
 {{trans-mid}}
 * Russian: {{t|ru|лигурский|sc=Cyrl}}
