--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -5,7 +5,7 @@
 From {{etyl|fr}} {{term|guilloche|lang=fr}}.
 
 ===Pronunciation===
-* {{IPA|/gɪˈlɒʃ/}}
+* {{IPA|/ɡɪˈlɒʃ/}}
 
 ===Noun===
 {{en-noun}}
