--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -79,7 +79,7 @@
 * [[Galician]]: [[porco#Galician|porco]] {{m}}
 * Georgian: {{t+|ka|ღორი|tr=ḡori|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Schwein|n}}
-* Greek: [[γουρούνι]] (gurúni) {{n}}, [[χοίρος]] (khíros) {{m}}
+* Greek: {{t|el|γουρούνι|n|tr=gouroúni}}, {{t|el|χοίρος|m|tr=choíros}}
 * Hawaiian: {{unicode|[[puaʻa]]}}
 * Hebrew: [[חזיר]] (hazír) {{m}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
@@ -174,7 +174,7 @@
 * Finnish: {{t+|fi|sika}}
 * French: {{t+|fr|salaud|m}}, {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * German: {{t+|de|Schwein|n}}
-* Greek: {{t+|el|γουρούνι|n|tr=gouroúni}},  {{t+|el|κτηνάνθρωπος|m|tr=ktinánθropos}}
+* Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
 * Icelandic: {{t+|is|svín|n}}
 * Italian: {{t+|it|bastardo|m}}, {{t+|it|bastarda|f}}, {{t+|it|stronzo|m}}, {{t+|it|stronza|f}}
 {{trans-mid}}
@@ -229,7 +229,6 @@
 
 {{trans-top|difficult problem}}
 * Finnish: {{t+|fi|pähkinä}}
-* Greek: {{t|el|μανίκι|n|tr=maníki}}
 {{trans-mid}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}
 {{trans-bottom}}
