this etymology is also listed under 'multiply' <multiplication#9769407>

--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -4,6 +4,9 @@
 * {{IPA|/ˌmʌltəplɪˈkeɪʃən/}}, {{SAMPA|/%mVlt@plI"keIS@n/}}
 *: {{rhymes|eɪʃən}}
 
+===Etymology===
+*Derived from [[Latin]] term [[multiplicare]]
+
 ===Noun===
 {{en-noun|s|-}}
 
