--- a/en/l/LDPE.26240.wikitext
+++ b/en/l/LDPE.26240.wikitext
@@ -4,6 +4,9 @@
 
 # {{organic compound}} Low Density [[polyethylene|Polyethylene]]
 
+====References====
+* Bashford, David.  [http://books.google.com/books?id=ycLq-EYaE0QC&dq=a.+schulman&source=gbs_navlinks_s Thermoplastics: Directory and databook]; ISBN 9780412733505. London: Chapman & Hall, 1997. 
+
 ===Anagrams===
 * {{alphagram|delp}}
 * [[pled#English|pled]]
