--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -1,5 +1,5 @@
 ==English==
-{{wikipedia|PVC_(disambiguation)}}
+{{wikipedia|PVC (disambiguation)}}
 
 ==={{initialism}}===
 '''PVC'''
@@ -17,6 +17,9 @@
 {{trans-top|medicine}}
 {{trans-mid}}
 {{trans-bottom}}
+
+====References====
+* {{organic chemistry}} Bashford, David.  [http://books.google.com/books?id=ycLq-EYaE0QC&dq=a.+schulman&source=gbs_navlinks_s Thermoplastics: Directory and databook]; ISBN 9780412733505. London: Chapman & Hall, 1997. 
 
 ====See also====
 * {{sense|chemistry}} [[ABS]]
