replace g (U+0067) with ɡ (U+0261) in IPA template <fingerpost#9787542>

--- a/en/f/fingerpost.720314.wikitext
+++ b/en/f/fingerpost.720314.wikitext
@@ -4,7 +4,7 @@
 {{compound|finger|post}}
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˈfɪŋ.gə(ɹ)ˌpəʊst/}}
+* {{a|UK}} {{IPA|/ˈfɪŋ.ɡə(ɹ)ˌpəʊst/}}
 
 ===Noun===
 [[File:Fingerpost at Chawton.jpg|thumb|right|a '''fingerpost''' (milepost), with '''fingerposts''' (boards) in Hampshire, England]]
