--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -12,7 +12,10 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (compare Wes
 ===Noun===
 {{en-noun}}
 
+# That which binds or ties. 
 # A [[troublesome]] situation; a [[problem]]; a [[predicament]] or [[quandary]].
+# Any twining or climbing plant or stem, especiallu a hop vine; a [[bine]].
+# {{music}} A [[ligature]] or [[tie]] for grouping notes.
 
 ===Verb===
 {{en-verb|binds|binding|bound|'''[[bound]]''' ''or rarely'' '''[[bounden]]'''}}
