--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -4,7 +4,7 @@
 ===Proper noun===
 {{en-proper-noun}}
 
-# {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Kings]].
+# {{biblical}}  A book of the [[Old Testament]] of the [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Kings]].
 
 ====Related terms====
 *[[Kgs]]
