/* Verb */ to break temporialy with a partner <break#9874709>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -85,7 +85,7 @@
 #: ''Huck's whooping '''broke''' the silence.''
 #: ''His turning on the lights '''broke''' the enchantment.''
 #: ''With the mood '''broken''', what we had been doing seemed pretty silly.''
-# {{intransitive}} {{rfdef}}
+# {{intransitive}} Of a voice, to alter in voice type-usually in men to go up, but women's voice can go down, or sound cracked. 
 #: ''His voice '''breaks''' when he gets emotional.''
 # {{intransitive|of a [[sound]]}} To become audible suddenly.
 #* {{circa|1843}} [[w:George Lippard|George Lippard]], ''The Battle-Day of Germantown'', reprinted in ''Washington and His Generals "1776"'', page 45&nbsp;[http://google.com/books?id=EM-qNjWrI9YC&pg=PA45&dq=%22sound+of+musquetry%22]:
@@ -94,6 +94,7 @@
 #: '''''break''' a seal''
 # {{transitive}} To break the [[shell]] of (an [[egg]]) {{gloss|cause it to no longer bar}}, allowing access to the inside.
 # {{transitive}} To open (a [[safe]]), especially without using the correct key, combination{{,}} or the like.
+# {{transitive}} {{US}} To arrange a temporary split with your partner. 
 
 ====Quotations====
 {{seeCites}}
@@ -112,6 +113,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{sense|transitive: cause to malfunction or stop working altogether}} [[bust]]
 * {{sense|transitive: cause a person or animal to lose his/her/its will}} [[subject]], [[tame]]
 * {{sense|transitive: do that which is forbidden by}} [[contravene]], [[go against]], [[violate]]
+* {{sense|transitive: temporary split with partner}} [[split]], [[mutual understanding]]
 
 ====Antonyms====
 * {{sense|intransitive: interrupt}} [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
@@ -151,6 +153,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[break wind]]
 * [[make-or-break]]
 * [[outbreak]]
+* [[be on a break]]
 {{rel-bottom}}
 
 ====See also====
