--- a/en/1/1 gauge.855487.wikitext
+++ b/en/1/1 gauge.855487.wikitext
@@ -1,12 +1,14 @@
 ==English==
+
 ===Noun===
 {{wikipedia}}
 {{en-noun|sg=[[1]] [[gauge]]|-}}
-#A [[model]] [[railway]] [[gauge]] of 1.75 inches (44.45 mm). 
 
-====Alternative spellings====
-*[[I gauge]]
-*[[gauge 1]]
+# A [[model]] [[railway]] [[gauge]] of 1.75 inches (44.45 mm).
+
+====Alternative forms====
+* [[I gauge]]
+* [[gauge 1]]
 
 ====Related terms====
-*[[2 gauge]]
+* [[2 gauge]]
