--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -19,6 +19,12 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 # [[month]]
 # KangXi radical 74 [[Index:Chinese radical/月|月]]
 
+====Derived characters====
+* [[Index:Chinese radical/月]]
+
+====See also====
+* [[青]] <!-- In modern form, but not etymologically -->
+
 ====References====
 * {{Han ref|kx=0504.190|dkj=14330|dj=0879.200|hdz=32041.010|uh=6708|ud=26376|bh=A4EB|bd=42219}}
 
