iwiki +[[:lv:thing]] <thing#9895352>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -251,6 +251,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 [[ku:thing]]
 [[lo:thing]]
 [[la:thing]]
+[[lv:thing]]
 [[lt:thing]]
 [[li:thing]]
 [[hu:thing]]
