--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -15,10 +15,11 @@
 *: Mandarin: {{t|zh|劍齒虎|sc=Hani}}, {{t|zh|剑齿虎|tr=jiànchǐhǔ|sc=Hani}}
 * Danish: {{t|da|sabelkat|c}}
 * Finnish: {{t-|fi|sapelihammastiikeri}}
-{{trans-mid}}
 * German: {{t+|de|Säbelzahntiger|m}}
+{{trans-mid}}
 * Norwegian: {{t-|no|sabeltanntiger|m}}, {{t|no|sabeltannkatt|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
+* Russian: {{qualifier|lit.: sabre-toothed cat}} {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška|sc=Cyrl}}
 * Spanish: {{t|es|diente de sable|m}}
 {{trans-bottom}}
 
