--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -19,7 +19,7 @@
 {{trans-mid}}
 * Norwegian: {{t-|no|sabeltanntiger|m}}, {{t|no|sabeltannkatt|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
-* Russian: {{qualifier|lit.: sabre-toothed cat}} {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška|sc=Cyrl}}
+* Russian: {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška|sc=Cyrl}} {{qualifier|lit.: sabre-toothed cat}}
 * Spanish: {{t|es|diente de sable|m}}
 {{trans-bottom}}
 
