--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -15,8 +15,9 @@
 *: Mandarin: {{t|zh|劍齒虎|sc=Hani}}, {{t|zh|剑齿虎|tr=jiànchǐhǔ|sc=Hani}}
 * Danish: {{t|da|sabelkat|c}}
 * Finnish: {{t-|fi|sapelihammastiikeri}}
-* German: {{t+|de|Säbelzahntiger|m}}
+* French: {{t|fr|chat à dents de sabre|m}}
 {{trans-mid}}
+* German: {{t+|de|Säbelzahntiger|m}}
 * Norwegian: {{t-|no|sabeltanntiger|m}}, {{t|no|sabeltannkatt|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
 * Russian: {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška|sc=Cyrl}} {{qualifier|lit.: sabre-toothed cat}}
