--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -16,8 +16,9 @@
 * Danish: {{t|da|sabelkat|c}}
 * Finnish: {{t-|fi|sapelihammastiikeri}}
 * French: {{t|fr|chat à dents de sabre|m}}
-{{trans-mid}}
 * German: {{t+|de|Säbelzahntiger|m}}
+{{trans-mid}}
+* Japanese: {{t|ja|剣歯虎|tr=けんしこ, kenshiko|sc=Jpan}}
 * Norwegian: {{t-|no|sabeltanntiger|m}}, {{t|no|sabeltannkatt|m}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
 * Russian: {{t|ru|саблезубая кошка|f|tr=sablezúbaja kóška|sc=Cyrl}} {{qualifier|lit.: sabre-toothed cat}}
