--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -65,6 +65,7 @@
 ====Translations====
 {{trans-top|To make a guess about the outcome of an event}}
 * Arabic: {{t|ar|راهن|tr=raahana}}
+* [[Basque]]: {{t|eu|apustu egin}}
 * [[Breton]]: {{t|br|klaoustreañ|xs=Breton}}
 * Bulgarian: {{t|bg|обзалагам се}},  {{t|bg|басирам се}}
 * Chinese: {{zh-tsp|打賭|打赌|dǎdǔ}}
@@ -87,6 +88,7 @@
 * Russian: {{t|ru|биться об заклад|tr=bít'sja ob zaklád}},  {{t|ru|держать пари|tr=deržát' parí}}
 * Slovak: {{t|sk|staviť}}, {{t|sk|vsadiť}}, {{t|sk|stávkovať}}
 * Slovene: {{t-|sl|staviti}}
+* Spanish: {{t|es|apostar}}
 * Swedish: {{t-|sv|slå vad}}
 {{trans-bottom}}
 
