--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -6,7 +6,11 @@
 #:''I used to think that nobody '''in his right mind''' would pay that much for such a thing, but people must pay it all the time, or the company wouldn't be in business.''
 
 ====Translations====
+{{trans-top|sane}}
+* Finnish: [[olla]] [[järjissä]][[-än|än]]
+{{trans-mid}}
 *Russian: [[в здравом уме]] /in healthy mind/, [[в своём уме]] /in one's own mind/
+{{trans-bottom}}
 
 ===See also===
 *[[out of one's mind]]
