t+lt:[[kraujuoti]] ([[WT:EDIT|Assisted]]) <bleed#9912166>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -63,7 +63,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * Korean: {{t|ko|피를 흘리다|sc=Hang}}
 * Latin: {{t|la|sanguinem mitto|alt=sanguinem mittō}},  {{t-|la|sanguino|alt=sanguinō}}
 * Latvian: {{t|lv|asiņot|xs=Latvian}}
-* {{trreq|Lithuanian}}
+* Lithuanian: {{t|lt|kraujuoti}}
 * Mongolian: {{t|mn|хуудас дүүрэн зураг|tr=huudas düüren zurag|sc=Cyrl|xs=Mongolian}}
 * [[Occitan]]: [[sagnar]]
 * [[Old French]]: {{tø|fro|saingnier}}
