--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -17,10 +17,10 @@
 
 ====Translations====
 {{trans-top|to decay}}
-* Arabic: {{Arab|[[افسد]]}} (’áfsada), {{Arab|[[فسد]]}} (fásada), {{t|ar|أفسد|tr='áfsada|sc=Arab}}, {{t|ar|فسد|tr=fásada|sc=Arab}}
+* Arabic: {{t|ar|أفسد|tr='áfsada|sc=Arab}}, {{t|ar|فسد|tr=fásada|sc=Arab}}
 * Armenian: {{t-|hy|փտել|tr=p'tel}}, {{t-|hy|նեխել|tr=nexel}}
 * {{trreq|Basque}}
-* Chinese: [[腐化]] (fǔhuà)
+* Chinese:
 *: Mandarin: {{t|zh|腐化|tr=fǔhuà|sc=Hani}}, {{t|zh|腐壞|sc=Hani}}, {{t|zh|腐坏|tr=fǔhuài|sc=Hani}}
 * Czech: {{t-|cs|hnít}}
 * Danish: {{t|da|rådne}}
@@ -32,12 +32,12 @@
 {{trans-mid}}
 * Greek: {{t|el|σαπίζω|tr=sapízo}}
 * Italian: {{t+|it|marcire}}
-* Japanese: [[腐る]] ([[くさる]], [[kusaru]]), {{t|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
-* Korean: [[썩다]] (sseokda), [[부패하아]] (bupaehada), {{t|ko|썩다|tr=sseokda|sc=Kore}}, {{t|ko|부패하아|tr=bupae-hada|sc=Kore}}
+* Japanese: {{t|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
+* Korean: {{t|ko|썩다|tr=sseokda|sc=Kore}}, {{t|ko|부패하아|tr=bupae-hada|sc=Kore}}
 * Latin: [[putesco#Latin|pūtesco]], [[tabesco#Latin|tābesco]]
 * Portuguese: {{t|pt|putrefazer}}
 * Romanian: {{t|ro|putrezi}}, {{t|ro|descompune}}
-* Russian: {{t+|ru|гнить|tr=gnit’}}, {{t|ru|сгнить|tr=sgnit’|sc=Cyrl}}
+* Russian: {{t+|ru|гнить|tr=gnit’}} {{impf}}, {{t|ru|сгнить|tr=sgnit’|sc=Cyrl}} {{pf}}
 * Spanish: {{t-|es|pudrir}}, {{t|es|podrir}}
 * Swedish: {{t|sv|ruttna}}
 * Turkish: {{t|tr|çürümek}}
