--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -21,15 +21,15 @@
 * Armenian: {{t-|hy|փտել|tr=p'tel}}, {{t-|hy|նեխել|tr=nexel}}
 * {{trreq|Basque}}
 * Chinese:
-*: Mandarin: {{t|zh|腐化|tr=fǔhuà|sc=Hani}}, {{t|zh|腐壞|sc=Hani}}, {{t|zh|腐坏|tr=fǔhuài|sc=Hani}}
+*: Mandarin: {{t|zh|腐化|tr=fǔhuà|sc=Hani}}, {{t|zh|腐壞|sc=Hani}}, {{t|zh|腐坏|tr=fǔhuài|sc=Hani}}, {{t|zh|腐爛|sc=Hani}}, {{t|zh|腐烂|tr=fǔlàn|sc=Hani}}
 * Czech: {{t-|cs|hnít}}
 * Danish: {{t|da|rådne}}
 * Dutch: {{t+|nl|rotten}}, {{t+|nl|vergaan}}
 * Finnish: {{t+|fi|mädäntyä}}
 * French: {{t+|fr|pourrir}}
 * Georgian: {{t|ka|ლპობა|tr=lpoba|sc=Geor|xs=Georgian}}, {{t|ka|დალპობა|tr=dalpoba|sc=Geor|xs=Georgian}}, {{t|ka|ჩალპობა|tr=čalpoba|sc=Geor|xs=Georgian}}, {{t|ka|ხრწნა|tr=xrts‘na|sc=Geor|xs=Georgian}}
-* German: {{t|de|verrotten}}, {{t+|de|verderben}}
 {{trans-mid}}
+* German: {{t|de|verrotten}}, {{t+|de|verderben}}
 * Greek: {{t|el|σαπίζω|tr=sapízo}}
 * Italian: {{t+|it|marcire}}
 * Japanese: {{t|ja|腐る|tr=くさる, kusaru|sc=Jpan}}
