--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -86,6 +86,7 @@ See {{term|beholde||to keep|lang=da}}
 [[kn:behold]]
 [[hu:behold]]
 [[ml:behold]]
+[[my:behold]]
 [[ja:behold]]
 [[pl:behold]]
 [[pt:behold]]
