--- a/en/s/swarm spore.856461.wikitext
+++ b/en/s/swarm spore.856461.wikitext
@@ -6,9 +6,6 @@
 # A [[zoospore]]
 
 ====Translations====
-{{rfc-tsort|unknown line format: ''See: '' ''' zoospore '''}}
-{{trans-top}}
-''See: '' '''[[zoospore]]'''
-{{trans-bottom}}
+{{trans-see|zoospore}}
 
 [[ar:swarm spore]]
