header -Alternative spellings +Alternative forms <burqa#9920594>

--- a/en/b/burqa.803246.wikitext
+++ b/en/b/burqa.803246.wikitext
@@ -8,14 +8,15 @@
 ====Translations====
 {{trans-see|burka}}
 
-[[Category:English words containing Q not followed by U]]
 [[Category:Clothing]]
+[[Category:English words containing Q not followed by U]]
+
 ----
 
 ==French==
 {{wikipedia|lang=fr}}
 
-===Alternative spellings===
+===Alternative forms===
 * {{l|fr|burka}}
 
 ===Noun===
@@ -37,7 +38,6 @@
 {{es-noun-m}}
 
 # '''burqa''' or [[burka]]
-
 
 [[es:burqa]]
 [[fr:burqa]]
