--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -94,7 +94,14 @@
 #: '''''break''' a seal''
 # {{transitive}} To break the [[shell]] of (an [[egg]]) {{gloss|cause it to no longer bar}}, allowing access to the inside.
 # {{transitive}} To open (a [[safe]]), especially without using the correct key, combination{{,}} or the like.
-# {{transitive}} {{US}} To arrange a temporary split with your partner. 
+# {{transitive|US}} To arrange a temporary split with your partner.
+# {{military|transitive}} To [[demote]], to reduce the military [[rank]] of; {{non-gloss definition|most often in passive.}}
+#* '''1953''' February 9, “[http://www.time.com/time/magazine/article/0,9171,889691,00.html Books: First Rulers of Asia]”, in ''Time'':
+#*: And he played no favorites: when his son-in-law sacked a city he had been told to spare, Genghis '''broke''' him to private.
+#* '''1968''', [[w:William Manchester|William Manchester]], ''[[w:The Arms of Krupp|The Arms of Krupp]]'', Back Bay (2003), ISBN 978-0-316-52940-2, [http://books.google.com/books?id=TIsvPMXQEBcC&pg=PA215&dq=broken page 215]:
+#*: One morning after the budget had failed to balance Finanzminister von Scholz picked up Der Reichsanzeiger and found he had been '''broken''' to sergeant.
+#* '''2006''', [[w:Peter Collier (political author)|Peter Collier]], ''Medal of Honor: Portraits of Valor Beyond the Call of Duty'', Second Edition, Artisan Books, ISBN 978-1-57965-314-9, [http://books.google.com/books?id=EqH-BJ-k0NsC&pg=PA42&dq=broken page 42]:
+#*: Not long after this event, Clausen became involved in another disciplinary situation and was '''broken''' to private—the only one to win the Medal of Honor in Vietnam.
 
 ====Quotations====
 {{seeCites}}
