iwiki +[[:kn:bound]] <bound#9958006>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -242,6 +242,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 [[ko:bound]]
 [[io:bound]]
 [[it:bound]]
+[[kn:bound]]
 [[ku:bound]]
 [[hu:bound]]
 [[ml:bound]]
