--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -19,7 +19,7 @@ From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 #*: <sup>{2}</sup> I am denying that a dream '''''qua''''' dream is a seeming, appearance or ‘semblance of reality’.
 #* '''2003''': Roy Porter, ''Flesh in the Age of Reason'', page 458 (Penguin, 2004)
 #*: It was '''qua''' poet that Byron resurrected the exploded and discarded immortal Christian soul by bodying it forth through the notion of soul conceived as poetic imagination.
-#* '''2005''': Ulfelder, Jay.Collective Action and the Breakdown of Authoritarian Regimes. International Political Science Review, 26(3), p318. [Retrieved 1615 240810 from http://www.jstor.org.ezproxy1.library.usyd.edu.au/stable/pdfplus/30039035.pdf?acceptTC=true.]
+#* '''2005''': Ulfelder, Jay.Collective Action and the Breakdown of Authoritarian Regimes. International Political Science Review, 26(3), p318. Retrieved 1615 240810 from http://www.jstor.org.ezproxy1.library.usyd.edu.au/stable/pdfplus/30039035.pdf?acceptTC=true.
 #*: "In essence, military regimes are autocracies in which the military '''''qua''''' organization performs many of the functions performed by the ruling party in single-party regimes."
 #* '''2009''': Ken Levy, [http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1404387 ''Killing, Letting Die, and the Case for Mildly Punishing Bad Samaritanism''], Georgia Law Review, p. 24.
 #*: Blame '''''qua''''' attitude is the feeling or belief that an individual has committed a wrongdoing, usually a wrongful action and/or harm, and can be reasonably expected not to have committed this wrongdoing. Blame qua practice is the public expression of this attitude – usually by means of censure (written or verbal criticism) or punishment. Generally, the morally worse the wrongdoing, the more severe the censure/punishment.
