--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -3,7 +3,7 @@
 {{rank|since|use|used|252|began|thy|less|till}}
 
 ===Pronunciation===
-* {{IPA|/bI'ɡæn/}}, {{SAMPA|/bI"g{n/}}
+* {{IPA|/bIˈɡæn/}}, {{SAMPA|/bI"g{n/}}
 * {{audio|en-us-began.ogg|Audio (US)}}
 * {{rhymes|æn}}
 * {{hyphenation|be|gan}}
