--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -25,7 +25,7 @@
 # {{rfv-sense}} {{transitive|medicine|ergative}} Of a bone, to [[fracture]] accidentally.
 #: ''Don't '''break''' your fingers playing basketball.''
 # {{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
-#: ''On the hottest day of the year the fridge '''broke'''.''
+#: ''On the hottest day of the year the refrigerator '''broke'''.''
 # {{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
 #: ''Let's '''break''' for lunch.''
 # {{intransitive|tennis}} To win a game as [[receiver]].
