--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -49,6 +49,7 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 
 [[fr:octillion]]
 [[io:octillion]]
+[[lt:octillion]]
 [[ml:octillion]]
 [[nl:octillion]]
 [[sv:octillion]]
