/* Finnish */ declension table <vodka#10023374>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -86,10 +86,16 @@
 
 ==Finnish==
 
+===Etymology===
+From {{etyl|ru|fi}}
+
 ===Noun===
-{{fi-noun}}
+{{infl|fi|noun}}
 
 # [[#English|vodka]]
+
+====Declension====
+{{fi-decl-koira|vodk}}
 
 ----
 
