--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -73,7 +73,7 @@ From {{etyl|fro}} {{term|ermine|(h)ermine|lang=fro}}, either from {{etyl|ML.}} {
 * Slovene: {{t+|sl|hermelin}}
 * Spanish: {{t+|es|armiño|m}}
 * Swedish: {{t-|sv|hermelin}}
-* Turkish: [[kakim]]
+* Turkish: {{t+|tr|as}}, {{t+|tr|kakım}}, {{t+|tr|ermin}}
 * Ukrainian: [[горностай]] ([[gornostaj]])
 * [[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
 * Welsh: [[carlwm]]
