--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -49,6 +49,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{te
 {{trans-top|grab}}
 * Arabic: {{Arab|[[استولى على]]}} (’istáula 3ála)
 * Armenian: {{t|hy|գրավել|tr=gravel|sc=Armn}}
+* Bengali: {{t|bn|ধরা|sc=Beng}}
 * Chinese: {{t|cmn|捕抓|tr=bǔzhuā|sc=Hans}}, {{t|cmn|攫取|tr=juéqǔ|sc=Hans}},  {{t-|cmn|捉|tr=zhuō|sc=Hans}},  {{t-|cmn|攫|tr=jué|sc=Hans}}
 * Chinese Characters: [[揢]]
 * Danish: {{t-|da|gribe}}
