t+bn:[[আবার]] t-balance ([[WT:EDIT|Assisted]]) <again#10038525>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -55,6 +55,7 @@
 * Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) 'úkhra}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) 'úkhra}} {{adverbial accusative used}}
 * Armenian: {{t-|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
 * [[Basque]]: [[berriro]]
+* Bengali: {{t|bn|আবার|tr=abar|sc=Beng}}
 * [[Breton]]: [[adarre]]
 * Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
 * Burmese: {{t|my|နောက်တဖန်|sc=Mymr|xs=Burmese}}
@@ -83,8 +84,8 @@
 * Indonesian: {{t-|id|lagi|xs=Indonesian}}
 * Irish: {{t+|ga|arís|xs=Irish}}
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
-* Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}},  {{t-|ja|再び|tr=ふたたび, futatabi}},  {{t|ja|もう一度|tr=mō ichido}},  {{t|ja|あらためて|tr=aratamete}}
 {{trans-mid}}
+* Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}},  {{t-|ja|再び|tr=ふたたび, futatabi}},  {{t|ja|もう一度|tr=mō ichido}},  {{t|ja|あらためて|tr=aratamete}}
 * {{trreq|Kannada}}
 * [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət)
 * Korean: [[다시]] (dasi)
