--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -44,9 +44,10 @@
 * {{trreq|Hebrew}}
 * {{trreq|Hindi}}
 * Hungarian: {{t+|hu|bőr}}
+* Icelandic: {{t|is|leður|n}}
 * [[Ido]]: {{t+|io|ledro|xs=Ido}}
-* Indonesian: {{t+|id|kulit|xs=Indonesian}}
 {{trans-mid}}
+* Indonesian: {{t+|id|kulit|xs=Indonesian}}
 * Irish: {{t-|ga|leathar|m|xs=Irish}}
 * Italian: {{t+|it|cuoio|m}}
 * Japanese: [[皮]] (かわ, kawa)
