/* Noun */ +def <minimum#10043563>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -14,7 +14,8 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 # The [[smallest]] [[amount]].
 #: ''He always tries to get away with doing the '''minimum'''.''
 # {{astronomy}} A period of minimum [[brightness]] or [[energy]] [[intensity]] (of a [[star]]).
-#: ''The Maunder '''minimum''' of the Sun reportedly corresponded to a period of great cold on Earth.''
+#: {{usex|The Maunder '''minimum''' of the Sun reportedly corresponded to a period of great cold on Earth.}}
+# {{analysis}} A [[lower bound]] of a set which is also an element of that set.
 # {{statistics}} The smallest member of a [[batch]] or [[sample]] or the lower bound of a [[probability distribution]].
 
 ====Usage notes====
