--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -70,6 +70,7 @@
 * [[Chamicuro]]: {{tø|ccc|yishla}}
 * Chinese: [[島]], [[岛]] (dǎo); [[島嶼]], [[岛屿]] (dǎoyǔ)
 *: Min Nan: [[tó-sū]]
+* [[Chuvash]]: {{tø|cv|утрав|tr=utrav|sc=Cyrl}}
 * [[Corsican]]: [[isula]] {{f}}
 * [[Cree]]: [[ᒥᓂᔥᑎᒄ]]
 * [[Crimean Tatar]]: [[ada#Crimean Tatar|ada]]
@@ -101,12 +102,17 @@
 * Irish: {{t+|ga|oileán|m|xs=Irish}}, {{t-|ga|inis|f|xs=Irish}}
 * Italian: {{t+|it|isola|f}}
 * Japanese: {{t+|ja|島|tr=[[しま]], shimá}}
+* [[Kalmyk]]: {{tø|xal|арл|tr=arl|sc=Cyrl}}
 * {{trreq|Kannada}}
+* [[Karachay-Balkar]]: {{tø|krc|айрымкан|tr=ayrımkan|sc=Cyrl}}, {{qualifier|Balkar}} {{tø|krc|айрыкам|tr=ayrıkam|sc=Cyrl}}
 * Kazakh: {{t-|kk|арал|tr=aral|sc=Cyrl|xs=Kazakh}}, {{t|kk|атау|tr=ataw|sc=Cyrl}}
 * [[Khakas]]: {{tø|kjh|олтырых|tr=oltırıx|sc=Cyrl}}
 * [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
+* [[Komi]]: {{tø|kv|ді|tr=di|sc=Cyrl}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 {{trans-mid}}
+* [[Kumyk]]: {{tø|kum|атав|tr=ataw|sc=Cyrl}}
+* [[Kyrgyz]]: {{t|ky|арал|tr=aral|sc=Cyrl}}
 * [[Lao]]: {{t-|lo|ດອນ|tr=''döön''|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|insula|f}}
 * Latvian: {{t+|lv|sala|f|xs=Latvian}}
@@ -157,12 +163,14 @@
 * Swahili: {{t+|sw|kisiwa|xs=Swahili}}
 * Swedish: {{t+|sv|ö|c}}, {{t+|sv|holme|c}}, {{t+|sv|kobbe|c}}, {{t+|sv|skär|n}}
 * [[Tagalog]]: {{t+|tl|pulo|xs=Tagalog}} archipelago- kapuluan
+* [[Tajik]]: {{t|tg|ҷазира|tr=çazira|sc=Cyrl}}
 * [[Tamil]]: {{t+|ta|தீவு|xs=Tamil}}
 * [[Tatar]]: {{t|tt|utraw}}
 * [[Telugu]]: [[దీవి]] (dIvi), [[ద్వీపం]] (''dveepaM'')
 * Thai: {{t-|th|เกาะ|tr=''gòr''}}
 * Turkish: {{t+|tr|ada}},  {{t+|tr|cezire}}
 * Turkmen: {{t+|tk|ada|xs=Turkmen}}
+* [[Tuvan]]: {{tø|tyv|ортулук|tr=ortuluq|sc=Cyrl}}
 * Ukrainian: {{t+|uk|острів|m|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[kupa]] {{f}}
 * Urdu: [[ٹاپو]]
