--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -344,8 +344,9 @@ From {{etyl|ang|en}} {{term|blawan|blÄwan|lang=ang}}, from {{proto|Germanic|blÄ
 =====Derived terms=====
 {{rel-top3|terms derived from ''blow'' (noun)}}
 * [[blow-by-blow]]
-{{rel-mid3}}
 * [[body blow]]
+{{rel-mid3}}
+* [[come to blows]]
 {{rel-mid3}}
 * [[low blow]]
 {{rel-bottom}}
