--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -7,7 +7,10 @@
 #{{idiom}} To [[speak]] [[condescendingly]] or as though the listener is [[inferior]].
 #:''She didn't like how he '''talked down''' to her as though she didn't understand.''
 ====Translations====
-{{trans-top}}
+{{trans-top|neciate}}
+{{trans-mid}}
+{{trans-bottom}}
+{{trans-top|patronize}}
 {{trans-mid}}
 {{trans-bottom}}
 
