--- a/en/h/hard-hearted.774564.wikitext
+++ b/en/h/hard-hearted.774564.wikitext
@@ -3,12 +3,7 @@
 ===Adjective===
 {{en-adj}}
 
-# {{alternative spelling of|hardhearted}}
-
-====Translations====
-* Romanian: {{t|ro|insensibil}}
-* Romanian: {{t-|ro|nemilos}}
-* Romanian: {{t-|ro|aspru}}
+# {{alternative form of|hardhearted}}
 
 [[fa:hard-hearted]]
 [[kn:hard-hearted]]
