--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -2,7 +2,7 @@
 ==English==
 {{wikipedia|fufu|foo-foo}}
 
-===Alternative spellings===
+===Alternative forms===
 * [[foofoo]]
 * [[fufu]]
 
@@ -12,14 +12,14 @@ Probably from African languages such as {{etyl|ln|en}} {{term|fufú||lang=ln}}
 ===Noun===
 {{en-noun|-}}
 
-# A [[dish]] of boiled, mashed [[yam]]s, [[plantain]], or other starchy vegetables, common as food in [[equatorial]] [[Africa]] and the [[Caribbean]]. Sold in speciality stores {{US}} in dry powdered or granulated form. 
+# A [[dish]] of boiled, mashed [[yam]]s, [[plantain]], or other starchy vegetables, common as food in [[equatorial]] [[Africa]] and the [[Caribbean]]. Sold in speciality stores {{US}} in dry powdered or granulated form.
 #* '''1958''', [[w:Chinua_Achebe|Chinua Achebe]], ''Things Fall Apart'', ch 11:
 #*: Ezinma and her mother sat on a mat on the floor after their supper of yam '''foo-foo''' and bitter-leaf soup.
-#*{{quote-book|title=The concubine‎|page=45|author=Elechi Amadi|year=1991|passage=There was so much fish and meat in the soup that they had to put them on a separate plate, to facilitate the free movement of their balls of '''foo-foo''' in the soup}}
-#*{{quote-book|title=Folk Stories from Southern Nigeria‎|page=35|author=Elphinstone Dayrell|year=2007|passage=The king, however, refused to do this; but as he was rather sorry for the tortoise, he said he would present him with a magic '''foo-foo''' tree, which would the tortoise and his family with food, {{...}} Every day it dropped '''foo-foo''' and soup on the ground.|pageurl=http://books.google.com/books?id=EDw0VM2zfiMC&pg=PA35&dq=foo-foo}}
+#* {{quote-book|title=The concubine‎|page=45|author=Elechi Amadi|year=1991|passage=There was so much fish and meat in the soup that they had to put them on a separate plate, to facilitate the free movement of their balls of '''foo-foo''' in the soup}}
+#* {{quote-book|title=Folk Stories from Southern Nigeria‎|page=35|author=Elphinstone Dayrell|year=2007|passage=The king, however, refused to do this; but as he was rather sorry for the tortoise, he said he would present him with a magic '''foo-foo''' tree, which would the tortoise and his family with food, {{...}} Every day it dropped '''foo-foo''' and soup on the ground.|pageurl=http://books.google.com/books?id=EDw0VM2zfiMC&pg=PA35&dq=foo-foo}}
 
 ====Synonyms====
-*{{sense|dish of yams etc}} [[choke-me]] {{i|Caribbean}}
+* {{sense|dish of yams etc}} [[choke-me]] {{i|Caribbean}}
 
 ===References===
 * Frederic Gomes Cassidy and Robert Brock Le Page (editors), ''Dictionary of Jamaican English‎'', Second Edition, University of the West Indies Press (2002), [http://books.google.com/books?id=_lmFzFgsTZYC&pg=PA185&dq=foo-foo page 185].
