--- a/en/m/monarchism.720278.wikitext
+++ b/en/m/monarchism.720278.wikitext
@@ -7,6 +7,12 @@
 # Rule by a [[monarchy]]
 # The advocacy of such a [[political]] system
 
+====Translations====
+{{trans-top|advocacy of the monarchistic political system}}
+* Czech: {{t|cs|monarchismus|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[pl:monarchism]]
 [[vi:monarchism]]
 [[zh:monarchism]]
