t+fi:[[tiltata]] ([[WT:EDIT|Assisted]]) <break#10208004>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -304,7 +304,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Bulgarian: {{t|bg|развалям се}}
 * Danish: gå i [[stykke]]r, gå [[itu]]
 * Dutch: [[stukgaan]], [[kapotgaan]]
-* Finnish: {{t+|fi|hajota}}, {{t-|fi|mennä rikki}}
+* Finnish: {{t+|fi|hajota}}, {{t-|fi|mennä rikki}}, {{qualifier|colloquial}} {{t|fi|tiltata}}
 * French: {{t+|fr|se casser}}
 * German: [[kaputtgehen]]
 * Greek: {{t|el|χαλάω|tr=chal'ao}}
