--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -112,6 +112,7 @@
 {{trans-bottom}}
 
 [[Category:Betting]]
+[[Category:English irregular verbs]]
 [[Category:English verbs which are their own past participle]]
 
 ----
