iwiki +[[:my:attend]] <attend#10235103>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -89,6 +89,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 [[lt:attend]]
 [[hu:attend]]
 [[ml:attend]]
+[[my:attend]]
 [[ja:attend]]
 [[pl:attend]]
 [[ro:attend]]
