--- a/en/q/quibbly.803406.wikitext
+++ b/en/q/quibbly.803406.wikitext
@@ -4,7 +4,7 @@
 * [[quibly]] (''rare'')
 
 ===Etymology===
-'''[[quibble]]''' + '''[[-y]]'''
+{{suffix|quibble|y}}
 
 ===Adjective===
 '''quibbly'''
