--- a/en/h/honoring.746945.wikitext
+++ b/en/h/honoring.746945.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Verb===
@@ -7,4 +6,5 @@
 # {{present participle of|[[honor]]}}
 
 [[fr:honoring]]
+[[nl:honoring]]
 [[simple:honoring]]
