--- a/en/o/opposites.746877.wikitext
+++ b/en/o/opposites.746877.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Noun===
@@ -11,4 +10,5 @@
 [[ar:opposites]]
 [[fr:opposites]]
 [[hu:opposites]]
+[[my:opposites]]
 [[simple:opposites]]
