iwiki +[[:my:pinsetters]] <pinsetters#10304207>

--- a/en/p/pinsetters.719937.wikitext
+++ b/en/p/pinsetters.719937.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Noun===
@@ -9,4 +8,6 @@
 ===Anagrams===
 * {{alphagram|eeinprsstt}} [[persistent#English|persistent]], [[presentist#English|presentist]], [[prettiness#English|prettiness]]
 [[Category:English plurals]]
+
 [[ar:pinsetters]]
+[[my:pinsetters]]
