iwiki +[[:my:blow]] <blow#10316556>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -450,6 +450,7 @@ From {{etyl|ang|en}} {{term|blawan|blÄwan|lang=ang}}, from {{proto|Germanic|blÄ
 [[li:blow]]
 [[hu:blow]]
 [[ml:blow]]
+[[my:blow]]
 [[nl:blow]]
 [[ja:blow]]
 [[oc:blow]]
