iwiki +[[:my:bubble]] <bubble#10317808>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -178,6 +178,7 @@ Partly imitative, also influenced by {{term|burble}}.
 [[lo:bubble]]
 [[hu:bubble]]
 [[ml:bubble]]
+[[my:bubble]]
 [[nl:bubble]]
 [[pt:bubble]]
 [[ru:bubble]]
