--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -110,7 +110,7 @@ From the prefix [[mega-]].
 ==Indonesian==
 
 ===Etymology===
-From Sanskrit
+From {{etyl|sa|id}} {{term|मेघ||cloud|tr=megha|lang=sa}}
 
 ===Noun===
 '''mega'''
