iwiki +[[:fa:yeah]] <yeah#10340176>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -100,6 +100,7 @@ From {{etyl|ang}} {{term|gea|ġēa|lang=ang}}, in turn from {{etyl|gem}} *{{term
 
 [[cs:yeah]]
 [[es:yeah]]
+[[fa:yeah]]
 [[fr:yeah]]
 [[ko:yeah]]
 [[it:yeah]]
