--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -63,6 +63,7 @@
 {{trans-top|act of whistling}}
 * Chinese:
 *: Mandarin: {{t|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t-|cmn|口笛|tr=kǒudí|sc=Hani}}
+* French: {{t|fr|siffler}}
 * German: {{t+|de|Pfeifen|n}}
 {{trans-mid}}
 * Hebrew: {{t-|he|שריקה|f|tr=sh'riká}}
