/* Anagrams */ horz <badger#10353198>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -148,9 +148,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 # A person who makes [[badge]]s.
 
 ===Anagrams===
-* {{alphagram|abdegr}}
-* [[barged#English|barged]]
-* [[garbed#English|garbed]]
+* {{alphagram|abdegr}} [[barged#English|barged]], [[garbed#English|garbed]]
 
 [[Category:Mammals]]
 
