--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -1,4 +1,4 @@
-{{slim-wikipedia}}
+{{slim-wikipedia|Badger (disambiguation)}}
 {{was wotd|2009|August|7}}
 ==English==
 
@@ -149,6 +149,9 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 {{en-noun}}
 
 # {{obsolete}} An itinerant licensed dealer in commodities used for food; a hawker; a huckster; -- formerly applied especially to one who bought grain in one place and sold it in another.
+
+=====See also=====
+* {{pedia|Badger (person)|Badger (trade)}}
 
 ===Etymology 3===
 {{rfv}}
