/* Noun */ move collective nouns to holonyms <badger#10353365>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -23,6 +23,9 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 =====Synonyms=====
 * {{sense|native or resident of Wisconsin}} [[Wisconsinite]]
 
+=====Holonyms=====
+* {{sense|mammal}} [[cete]], [[colony]]
+
 =====Derived terms=====
 {{rel-top|terms derived from ''badger (noun)''}}
 * [[American badger]]
@@ -110,11 +113,6 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * [[sett]], [[set]]
 * {{pedia}}
 * [[Appendix: Animals]]
-
-;Collective nouns
-* [[cete]]
-* [[colony]]
-* [[Appendix:English collective nouns]]
 
 ====Verb====
 {{en-verb|badgers|badgering|badgered}}
