--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -122,7 +122,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 # {{British|informal}} To [[pass gas]]; to [[fart]].
 
 =====Synonyms=====
-* See also [[Wikisaurus:flatulate]]
+* {{sense|to fart}} [[Wikisaurus:flatulate]]
 
 =====Translations=====
 {{trans-top|pester}}
