--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -305,8 +305,10 @@
 
 # {{context|of swine}} to [[give birth]].
 #:* The black [[sow]] '''pigged''' at seven this morning.
-# To eat greedily (also '''pig out'''), or in a noisy or dirty fashion.
+# {{intransitive}} To greedily [[consume]] (especially food).
 #:* They were '''pigging''' on the free food at the bar.
+#*'''2009''', Thomas Pynchon, ''Inherent Vice'', Vintage 2010, p. 349:
+#*:"Wow, Doc. That's heavy." Denis sat there '''pigging''' on the joint as usual.
 
 [[Category:1000 English basic words]]
 [[Category:English nouns with irregular plurals]]
