t+ht:[[siflèt]] t+vi:[[còi]] t+vi:[[tiếng hót]] t+vi:[[tiếng huýt]] t+tr:[[ıslık]] t+az:[[fit]] t+af:[[fluit]] t+sq:[[fishkëllimë]] t+bg:[[свирка]] t-balance t+uk:[[свист]] t+uk:[[свисток]] t+tl:[[sipol]] t+tl:[[pito]] ( <whistle#10367946>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -35,8 +35,12 @@
 
 ====Translations====
 {{trans-top|device used to make a whistling sound}}
+* [[Afrikaans]]: {{t|af|fluit}}
+* Albanian: {{t|sq|fishkëllimë|f}}
 * Armenian: {{t|hy|սուլիչ|tr=sulič}}
+* [[Azeri]]: {{t|az|fit}}
 * [[Breton]]: {{t|br|c'hwitell|f|xs=Breton}}, {{t|br|c'hwitelloù|p|xs=Breton}}
+* Bulgarian: {{t|bg|свирка|f|tr=svirka|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|哨子|tr=shàozi|sc=Hani}}, {{t|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t-|cmn|口笛|tr=kǒudí|sc=Hani}}
 * Croatian: {{t-|hr|zviždaljka|f}}
@@ -45,9 +49,10 @@
 * Finnish: {{t+|fi|pilli}}
 * French: {{t+|fr|sifflet}}
 * German: {{t+|de|Pfeife|f}},  {{t|de|Trillerpfeife|f}}
+* [[Haitian Creole]]: {{tø|ht|siflèt}}
 * Hungarian: {{t+|hu|síp}}
-* Irish: {{t+|ga|feadóg|f|xs=Irish}}
 {{trans-mid}}
+* Irish: {{t+|ga|feadóg|f|xs=Irish}}
 * Italian: {{t-|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue}}, {{t|ja|ホイッスル|tr=hoissuru}}, {{t-|ja|口笛|tr=くちぶえ, kuchibue}}
 * [[Meru]]: {{tø|mer|thirimbi}}
@@ -59,6 +64,10 @@
 * Spanish: {{t+|es|chifle|m}},  {{t+|es|pito|m}},  {{t+|es|silbato|m}}
 * Swahili: {{t+|sw|kipenga|xs=Swahili}},  {{t+|sw|firimbi|xs=Swahili}},  {{t+|sw|filimbi|xs=Swahili}}
 * Swedish: {{t+|sv|vissla|c}}, {{t+|sv|pipa|c}}, {{t+|sv|visselpipa|c}}
+* [[Tagalog]]: {{t|tl|sipol}}, {{t|tl|pito}}
+* Turkish: {{t|tr|ıslık}}
+* Ukrainian: {{t|uk|свист|m|tr=svyst|sc=Cyrl}}, {{t|uk|свисток|m|tr=svystok|sc=Cyrl}}
+* Vietnamese: {{t|vi|còi}}, {{t|vi|tiếng hót}}, {{t|vi|tiếng huýt}}
 {{trans-bottom}}
 {{trans-top|act of whistling}}
 * Chinese:
