--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -45,6 +45,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Dutch: {{t|nl|vermenigvuldiging|f}}
 * Greek: {{t+|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 {{trans-mid}}
+* Romanian: {{t|ro|înmulțire|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
 {{trans-bottom}}
 
