/* English */ fi translation <environmental science#10368648>

--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -9,4 +9,10 @@
 ====Related terms====
 * [[environmental scientist]]
 
+====Translations====
+{{trans-top|integrated study of environment}}
+* Finnish: {{t|fi|ympäristötiede}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[ta:environmental science]]
