--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -9,7 +9,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang}}.
 
 From {{proto|Germanic|thengan}}; cf. German {{term|Ding|lang=de}}, Danish and Norwegian {{term|ting}}.
 
-Originally meaning an assembly, that handled political and court issues. Later an issue at that assembly was called a “thing”, leading to today's meaning “an object”.
+Originally meaning an assembly, that handled political and court issues. Later an issue at that assembly was called a “thing”, leading to today's meaning “an object”. Compare Latin [[res]], also meaning legal matter.
 
 ===Pronunciation===
 * {{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
