/* Translations */ sv <bet#10402023>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -38,7 +38,7 @@
 * Serbian: {{t-|sr|opklada|m}}
 * Slovene: {{t-|sl|stava|f}}
 * Spanish: {{t-|es|apuesta}}
-* Swedish: [[vad#Noun|vad]] {{n}}
+* Swedish: {{t|sv|vad|n}}
 * [[Telugu]]: [[పంతం]] (pantam)
 {{trans-bottom}}
 
