--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -47,6 +47,8 @@ Please distinguish between the Frisian language group, the West Frisian language
 ===See also===
 * {{pedialite|West Frisian language}}
 * {{ISO 639|1code=fy|3code=fry}}
+* {{langcat}}
+* {{langlist}}
 
 [[fy:West Frisian]]
 [[no:West Frisian]]
