--- a/en/p/physiologic pH.741233.wikitext
+++ b/en/p/physiologic pH.741233.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 {{en-noun|sg=[[physiologic]] [[pH]]|-}}
 
-# {{biochemistry}} The [[pH]] that normally prevails in the [[human]] [[body]]. It's approximately 7.4.
+# {{biochemistry}} The [[pH]] that normally prevails in the [[human]] [[body]]. It is approximately 7.4.
