--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -6,8 +6,7 @@ GCC was originally an Acronym for "GNU C Compiler", now a [[backronym]] for "GNU
 ==={{initialism}}===
 '''GCC'''
 
-#originally stood for "[[GNU]] C [[Compiler]]", but now stands for "GNU Compiler Collection".
-#:A collection of [[compilers]] for C, C++, Fortran, etc. The compilers aim to be first and foremost standards-compliant and correct. This differs from other compilers many of which are developed by commercial companies and specialised to show off their hardware or software. Java support (GCJ) is new and not yet robust.
+# {{computing}} A collection of [[compilers]] for C, C++, Fortran, etc. aiming to be standards-compliant and correct.
 # [[w:Cooperation Council for the Arab States of the Gulf|Gulf Cooperation Council]]
 
 ===See also===
