/* English */ Better yet, Pigs <pig#10430782>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -312,7 +312,7 @@
 
 [[Category:1000 English basic words]]
 [[Category:English nouns with irregular plurals]]
-[[Category:Mammals]]
+[[Category:Pigs]]
 
 ----
 
