--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -112,7 +112,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 # a suffix without definite meaning, used to form related words
 #: ''[[kruco]]'' - ''[[krucumi]]''
 #:: a cross - to crucify
-#: ''[[malvarmo]]'' - ''[[malvarmumo]]''
+#: ''[[malvarma]]'' - ''[[malvarmumo]]''
 #:: cold (temperature) - cold (disease)
 
 
