/* Translations */ lv~ <badger#10464928>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -76,7 +76,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Kurdish:
 ** Kurmanji: [[kurbeşk]]
 * [[Ladin]]: [[tas]]
-* Latvian: [[āpsis]] {{g|Latvian}}
+* Latvian: [[āpsis]] {{m}}
 * Lithuanian: [[barsùkas]], [[opšrùs]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[jazw]], [[šwińc]]
 * [[Macedonian]]: {{t|mk|јазовец|m|tr=jázovec}}
