--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -263,6 +263,7 @@ From {{etyl|la|sv}} {{term|divisio|lang=la}}, noun of process form from perfect 
 [[kn:division]]
 [[kk:division]]
 [[sw:division]]
+[[ku:division]]
 [[li:division]]
 [[hu:division]]
 [[ml:division]]
