--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -29,6 +29,7 @@ Used with the definite article {{term|the}}.
 * Armenian: {{t-|hy|Բալկաններ|tr=Balkanner}}
 * [[Asturian]]: {{t-|ast|Balcanes|m|xs=Asturian}}
 * [[Catalan]]: {{t-|ca|Balcans|m|p}}
+* Croatian: {{t|hr|Balkan|m}}
 * French: {{t+|fr|Balkans|m}}
 * Hungarian: {{t+|hu|Balkán}}
 {{trans-mid}}
