--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -36,6 +36,7 @@ Used with the definite article {{term|the}}.
 * [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t-|pt|Balcãs|m|p}}
+* Romanian: {{t|ro|Balcani|m|p}}
 * Russian: {{t-|ru|Балканы|m|p|tr=Balkány}}
 * Turkish: {{t+|tr|Balkanlar}}
 {{trans-bottom}}
