t+nl:[[onderwerpen]] ([[WT:EDIT|Assisted]]) <bend#10479302>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -78,6 +78,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 
 {{trans-top|to force or be forced to submit}}
 * Bulgarian: {{t|bg|подчинявам}}
+* Dutch: {{t|nl|onderwerpen}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}},  {{t+|sw|kunja|xs=Swahili}}
 {{trans-mid}}
 * Swedish: {{t|sv|kuva}}
