iwiki +[[:ku:attend]] <attend#10484564>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -85,6 +85,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 [[io:attend]]
 [[it:attend]]
 [[kn:attend]]
+[[ku:attend]]
 [[lo:attend]]
 [[lt:attend]]
 [[hu:attend]]
