--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -130,6 +130,7 @@ From {{etyl|fro}} {{term|ermine|(h)ermine|lang=fro}}, either from {{etyl|ML.}} {
 [[fa:ermine]]
 [[fy:ermine]]
 [[io:ermine]]
+[[it:ermine]]
 [[hu:ermine]]
 [[ja:ermine]]
 [[ro:ermine]]
