--- a/en/a/autojumble.856202.wikitext
+++ b/en/a/autojumble.856202.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 {{en-noun}}
 
-#{{British}} A [[sale]] of second-hand spare parts for for old [[car]]s
+#{{British}} A [[sale]] of second-hand spare parts for old [[car]]s
