--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -27,7 +27,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 *: Mandarin: {{t-|cmn|任天堂|tr=Réntiāntáng|sc=Hani}}
 * Finnish: {{t-|fi|Nintendo}}
 {{trans-mid}}
-* Japanese: {{t+|ja|ファミコン}},  {{t|ja|ニンテンドー|tr=Nintendō}},  {{t+|ja|ファミコン|tr=famikon}}
+* Japanese: {{t|ja|ニンテンドー|tr=Nintendō}},  {{t+|ja|ファミコン|tr=famikon}}
 * Russian: {{t|ru|Нинтендо|tr=Ninténdo}}
 {{trans-bottom}}
 
