--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -37,6 +37,7 @@
 {{trans-top|at that time}}
 * Albanian: {{t+|sq|atëherë|xs=Albanian}}
 * Arabic: {{Arab|[[ثم]]}} (ṯúmma)
+* Bengali: {{l|bn|তখন|tr=tôkhôn|sc=Beng}}
 * [[Catalan]]: [[llavors]]
 * Chinese: [[当時]], [[当时]] (dāngshí), [[那時]], [[那时]] (nà shí)
 * Czech: {{t+|cs|tehdy}}
@@ -104,7 +105,9 @@
 * Albanian: [[pastaj]]
 * Arabic: {{Arab|[[ثم]]}} (ṯúmma)
 * Armenian: [[հետո]] (heto)
-* Chinese: [[接著]], [[接着]] (jiēzhe), [[然後]], [[然后]] (ránhòu)
+* Bengali: {{t|bn|এরপর|tr=erpôr|sc=Beng}}, {{t|bn|তারপর|tr=tarpôr|sc=Beng}}
+* Chinese: 
+*: Mandarin: [[接著]], [[接着]] (jiēzhe), [[然後]], [[然后]] (ránhòu)
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
 * Dutch: {{t+|nl|dan}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
