iwiki +[[:my:rot]] <rot#10504589>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -260,6 +260,7 @@ Tok Pisin texts:  from the beginning to the present / edited by Peter Mühlhäus
 [[lt:rot]]
 [[hu:rot]]
 [[ml:rot]]
+[[my:rot]]
 [[nl:rot]]
 [[ja:rot]]
 [[oc:rot]]
