--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -49,7 +49,7 @@
 * Finnish: {{t+|fi|mylly}}
 * French: {{t+|fr|moulin|m}}
 * German: {{t+|de|Mühle|f}}
-* Greek: {{t+|el|μύλος|tr=mylos}}
+* Greek: {{t+|el|μύλος|m|tr=mýlos}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
 * Hungarian: {{t+|hu|malom}}
 * Italian: {{t+|it|mulino|m}}
@@ -77,6 +77,7 @@
 
 {{trans-top|building housing a grinding apparatus}}
 * Finnish: {{t+|fi|mylly}}
+* Greek: {{t+|el|μύλος|m|tr=mýlos}}
 {{trans-mid}}
 * [[Scottish Gaelic]]: {{t-|gd|muileann|m|f|xs=Scottish Gaelic}}
 {{trans-bottom}}
