t+es:[[peso]] t+ko:[[체중]] t-balance ([[WT:EDIT|Assisted]]) <weight#10505587>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -101,11 +101,13 @@
 * Estonian: {{t|et|kaaluma}}
 * Finnish: [[punnus]]
 * Greek: {{t+|el|ζύγι|n|tr=zíγi}}, {{t|el|σταθμά|n|p|tr=staθmá}}, {{t|el|σταθμίον|n|tr=staθmíon}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|súly}}
+{{trans-mid}}
 * Japanese: {{t|ja|分銅|tr=fundō}}
+* Korean: {{t|ko|체중|tr=chejung|sc=Kore}}
 * Russian: {{t+|ru|гиря|f|tr=gír'a}}
 * [[Scots]]: {{tø|sco|weicht|xs=Scots}}
+* Spanish: {{t|es|peso|m}}
 * Swedish: {{t+|sv|vikt|c}}
 * Turkish: {{t+|tr|ağırlık}}
 {{trans-bottom}}
