--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -67,11 +67,11 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Kurdish: {{ku-Arab|[[سیمۆره‌]]}}
 * [[Kyrgyz]]: {{t|ky|тыйын чычкан|tr=tıyın çıçqan|sc=Cyrl|xs=Kyrgyz}}
 * [[Ladin]]: [[schirata]] {{f}}
-{{trans-mid}}
 * Latin: {{t+|la|sciurus|m}}
+{{trans-mid}}
 * Latvian: {{t-|lv|vāvere|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|voverė|f|xs=Lithuanian}}
-* Lojban: {{t|jbo|ricyratcu|xs=Lojban}}
+* [[Lojban]]: {{t|jbo|ricyratcu|xs=Lojban}}
 * [[Lower Sorbian]]: {{tø|dsb|njewjericka|f|xs=Lower Sorbian}}
 * [[Macedonian]]: {{t|mk|верверица|f|tr=vervérica}}
 * Maltese: {{t|mt|skwiril|m|xs=Maltese}}
