--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -102,7 +102,7 @@
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|оглас|m|tr=óglas}}
 * Portuguese: [[edital]] {{m}}
-* Romanian: {{t|ro|anunț |n}}
+* Romanian: {{t|ro|anunț |n}} (public)
 * Russian: {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t|ru|анонс|m|tr=anóns}}, {{t|ru|извещение|n|tr=izveščénije}}
 {{trans-bottom}}
 
