--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -59,7 +59,7 @@
 * Cherokee: [[ᏥᏍᏚ]] (tsisdu)
 * [[Chickasaw]]: [[chokfi]]
 * Chinese:
-*: Mandarin: {{t|zh|兔子|tr=tùzi|sc=Hani}}, {{i|white rabbit}} {{t|zh|白兔|tr=bótù|sc=Hani}}
+*: Mandarin: {{t|zh|兔子|tr=tùzi|sc=Hani}}, {{i|white rabbit}} {{t|zh|白兔|tr=báitù|sc=Hani}}
 * Croatian: {{t-|hr|kunić|m}}
 * Czech: {{t-|cs|králík|m}}
 * Danish: {{t+|da|kanin|c}}
