/* Usage notes */ typo <theory#10510274>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -24,7 +24,7 @@ English since 1613, from {{etyl|fr}} {{term|lang=fr|théorie}} < {{etyl|la}} {{t
 #: ''A '''theory''' is consistent if it has a model.''
 
 ====Usage notes====
-In scientific discourse, the sense “unproven conjecture” is discouraged (with {{term|hypothesis|lang=en}} or {{term|conjecture|lang=en}} preferred), due to unintentional ambiguity and intentional equivocation with the sense “well-developed statement or structure”. This is particularly found with reference to the “[[w:theory of evolution|'''theory''' of evolution]]”, which opponents disparage with “it’s just a '''theory''' [conjecture]”, while proponents retort that in this context, '''theory''' means instead “well-developed, well-establish”.
+In scientific discourse, the sense “unproven conjecture” is discouraged (with {{term|hypothesis|lang=en}} or {{term|conjecture|lang=en}} preferred), due to unintentional ambiguity and intentional equivocation with the sense “well-developed statement or structure”. This is particularly found with reference to the “[[w:theory of evolution|'''theory''' of evolution]]”, which opponents disparage with “it’s just a '''theory''' [conjecture]”, while proponents retort that in this context, '''theory''' means instead “well-developed, well-established”.
 
 ====Synonyms====
 * See also [[Wikisaurus:supposition]]
