--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -53,6 +53,7 @@
 * Japanese: [[皮]] (かわ, kawa)
 * Korean: [[가죽]] (gajuk)
 * Latin: {{t-|la|cutis|f}}
+* Latvian: {{t|lv|āda|f}}
 * Lithuanian: {{t+|lt|oda|f|xs=Lithuanian}}
 * [[Malayalam]]: [[തോല്‍]] (thOl)
 * {{trreq|Mongolian}}
@@ -112,6 +113,7 @@
 * Bosnian: {{t-|bs|kožni|m}}
 * Dutch: {{t+|nl|leren}}
 * Finnish: [[nahka]]-, [[nahkainen]]
+* Lithuanian: {{t|lt|odinis}}
 * Persian: {{t-|fa|چرمی|tr=charmi|xs=Persian}}
 * Polish: [[skórzany]] {{m}}, [[skórzana]] {{f}}, [[skórzane]] {{n}}
 * Russian: {{t+|ru|кожаный|tr=kóžanyj}}
