move Old French under French, rm duplicate <pig#10511343>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -76,6 +76,7 @@
 * Faroese: {{t-|fo|svín|n|xs=Faroese}}
 * Finnish: {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
+*: [[Old French]]: {{tø|fro|porc|m}}, {{tø|fro|bacon|m}}
 * [[Friulian]]: [[purcit]] {{m}}
 * [[Galician]]: [[porco#Galician|porco]] {{m}}
 * Georgian: {{t+|ka|ღორი|tr=ḡori|sc=Geor|xs=Georgian}}
@@ -109,9 +110,8 @@
 * [[Nahuatl]]: {{t-|nah|pitzotl|xs=Nahuatl}}
 * Navajo: {{tø|nv|bisóodi}}
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
-* [[Occitan]]: [[pòrc]] {{m}}
+* [[Occitan]]: {{t|oc|pòrc|m}}
 * [[Old Church Slavonic]]: {{tø|cu|свиниꙗ|f|tr=svinija|sc=Cyrs}}
-* [[Old French]]: {{tø|fro|bacon}}, {{tø|fro|porc|m}}, {{tø|fro|bacon|m}}
 * Persian: {{fa-Arab|[[خوک]]}} (khuk)
 * Polish: {{t+|pl|świnia|f}}
 * Portuguese: {{t+|pt|porco|m}}
@@ -128,7 +128,7 @@
 * Slovak: [[prasa]] {{n}} (1)
 * Slovene: [[svinja]] {{f}}, [[prašič]] {{m}}, [[pujs]] {{m}}
 * Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{italbrac|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
-* Swahili: {{t+|sw|nguruwe|xs=Swahili}},  {{t+|sw|nguruwe|xs=Swahili}}
+* Swahili: {{t+|sw|nguruwe|xs=Swahili}}, {{t+|sw|nguruwe|xs=Swahili}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
 * [[Tagalog]]: [[baboy]]
 * [[Taos]]: [[kùci’ína]]
@@ -136,7 +136,7 @@
 * [[Tok Pisin]]: [[pik]]
 * [[Tongan]]: {{tø|to|puaka|xs=Tongan}}
 * [[Tswana]]: {{t-|tn|kolobe|xs=Tswana}} (9/10)
-* Turkish: {{t+|tr|domuz}},  {{t|tr|hınzır}}
+* Turkish: {{t+|tr|domuz}}, {{t|tr|hınzır}}
 * Ukrainian: {{t-|uk|свиня|f|tr=svynja|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[swinjo]] {{n}}
 * Urdu: {{ur-Arab|[[خوک]]}}, {{ur-Arab|[[خنزیر]]}} {{g|Urdu}}
@@ -308,7 +308,7 @@
 #:* The black [[sow]] '''pigged''' at seven this morning.
 # {{intransitive}} To greedily [[consume]] (especially food).
 #:* They were '''pigging''' on the free food at the bar.
-#*'''2009''', Thomas Pynchon, ''Inherent Vice'', Vintage 2010, p. 349:
+#* '''2009''', Thomas Pynchon, ''Inherent Vice'', Vintage 2010, p. 349:
 #*:"Wow, Doc. That's heavy." Denis sat there '''pigging''' on the joint as usual.
 
 [[Category:1000 English basic words]]
