--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -63,7 +63,7 @@
 * Persian: {{t+|fa|چرم|tr=čarm|xs=Persian}}
 * Polish: {{t+|pl|skóra|f}}
 * Portuguese: {{t+|pt|couro|m}}
-* {{trreq|Romanian}}
+* Romanian: {{t|ro|piele|f}}
 * Russian: {{t+|ru|кожа|f|tr=kóža}}
 * Serbian:
 *: Roman: [[koža#Serbian|koža]] {{f}}
