--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -116,6 +116,7 @@
 * Lithuanian: {{t|lt|odinis}}
 * Persian: {{t-|fa|چرمی|tr=charmi|xs=Persian}}
 * Polish: [[skórzany]] {{m}}, [[skórzana]] {{f}}, [[skórzane]] {{n}}
+* Romanian: din [[piele]] (fabricat)
 * Russian: {{t+|ru|кожаный|tr=kóžanyj}}
 {{trans-mid}}
 * Serbian:
