--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -34,7 +34,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 * {{trreq|Icelandic}}
 * {{trreq|Indonesian}}
 {{trans-mid}}
-* {{trreq|Italian}}
+* Italian: {{t|it|promettere}}
 * Japanese: {{t|ja|公約する|tr=kōyaku suru}}
 * {{trreq|Korean}}
 * Latin: {{t-|la|spondere}}, {{t-|la|vovere}}
