--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -8,7 +8,7 @@
 *: {{rhymes|ɑp}}
 
 ===Etymology 1===
-Probably from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|la|en}} {{term|capio|capere|lang=la|to seize, to grasp}}.
+Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|la|en}} {{term|capio|capere|lang=la|to seize, to grasp}}; or possibly from {{etyl|nl}} {{term|kapen||to steal|lang=nl}}, from {{etyl|fy}} {{term|kapia|kāpia|to take away}}, from {{etyl|ofs}} {{term|kapia}}, to buy.
 
 ====Verb====
 {{en-verb|cop|p|ing}}
