iwiki +[[:ru:togue]] <togue#10521011>

--- a/en/t/togue.855176.wikitext
+++ b/en/t/togue.855176.wikitext
@@ -20,5 +20,6 @@ Encarta® World English Dictionary [North American Edition]
 [[Category:Fish]]
 
 [[es:togue]]
+[[ru:togue]]
 [[ta:togue]]
 [[tr:togue]]
