t+tr:[[Kuzey Afrikalı]] t-balance ([[WT:EDIT|Assisted]]) <North African#10522913>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -21,6 +21,7 @@
 ====Translations====
 {{trans-top|native or inhabitant of North Africa}}
 * [[Ido]]: nord-Afrikano
-{{trans-mid}}
 * Italian: {{t-|it|nordafricano}}
+{{trans-mid}}
+* Turkish: {{t|tr|Kuzey Afrikalı}}
 {{trans-bottom}}
