--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -14,7 +14,7 @@
 * [[toast#English|toast]]
 * [[toats#English|toats]]
 
-[[Category:Mammals]]
+[[Category:Mustelids]]
 
 [[fr:stoat]]
 [[fy:stoat]]
