--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -163,7 +163,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 ===Anagrams===
 * {{alphagram|abdegr}} [[barged#English|barged]], [[garbed#English|garbed]]
 
-[[Category:Mammals]]
+[[Category:Mustelids]]
 
 ----
 
