--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -65,23 +65,21 @@
 
 ===Etymology 2===
 {{wikipedia}}
-shortening of  [[Quack-salver]] ([[Quack-saluer]]), from {{etyl|dum}} [[kwaksalver]] (modern [[kwakzalver]]), literally "hawker of salve", itself from [[quacken]] "to brag, boast, (literally) croak" + [[zalf]] "salve"
+c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||lang=dum|hawker of salve}} ({{etyl|nl-}} {{term|kwakzalver|lang=nl}}), from {{term|quacken||lang=dum|to brag, boast; to croak}}
 
 ====Noun====
 {{en-noun}}
 
 # A fraudulent [[healer]] or incompetent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
 #: ''That doctor is nothing but a lousy '''quack'''!''
+#* '''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
+#*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
+#* '''1720''': William Derham, ''Physico-theology''
+#*: After ſome Months, the '''Quack''' gets privately to Town, [...]
+#* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
+#*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
 # A [[charlatan]]. <!-- #:''What a '''quack''' he is, saying that's an organic [[Viagra]]™ !'' -->
 # {{slang}} A [[doctor]].
-
-=====Quotations=====
-* '''1662''': ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
-*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
-* '''1720''': William Derham, ''Physico-theology''
-*: After ſome Months, the '''Quack''' gets privately to Town, [...]
-* '''1843''', [[:w:Thomas Carlyle|Thomas Carlyle]], ''[[:w:Past and Present (book)|Past and Present]]'', book 2, ch. 8, ''The Electon''
-*: ‘if we are ourselves valets, there shall ‘exist no hero for us; we shall not know the hero when we see him;’ - we shall take the '''quack''' for a hero; and cry, audibly through all ballot-boxes and machinery whatsoever, Thou art he; be thou King over us!
 
 =====Synonyms=====
 * See also [[Wikisaurus:deceiver]]
