--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -33,6 +33,7 @@
 * [[Interlingua]]: [[benque]], [[malgrado]], [[non obstante]]
 * Italian: {{t+|it|comunque}}, {{t+|it|nonostante}}, {{t-|it|in ogni caso}}, {{t-|it|ad ogni modo}}
 * Japanese: {{t|ja|にもかかわらず|tr=nimokakawarazu}}, {{t-|ja|それでも|tr=soredemo}}
+* Kurdish: {{t|ku|dîsa jî|sc=ku-Arab}}
 * [[Luo]]: [[kata kamano]]
 {{trans-mid}}
 * Navajo: {{tø|nv|ndi}}
