--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -201,7 +201,7 @@ From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 * {{a|Western Catalan}} {{IPA|lang=ca|[ˈsimpɫe]}}
 
 ===Adjective===
-{{infl|ca|adjective|g=m|g2=f|plural|simples|obsolete feminine|simpla}}
+{{ca-adj|type=mf}}
 
 # [[#Adjective|simple]] {{gloss|uncomplicated}}
 # [[single]] {{gloss|not divided into parts}}
