--- a/en/s/see stars.776097.wikitext
+++ b/en/s/see stars.776097.wikitext
@@ -6,6 +6,12 @@
 ===Verb===
 {{en-verb|inf=[[to]] [[see]] [[star]]s|sees stars|seeing stars|saw stars|seen stars}}
 
-# {{idiom}} To see [[apparent]] flashing lights, especially after receiving a [[blow]] to the [[head]].
+# {{idiom}} To experience [[apparent]] flashing lights in one's field of [[vision]], especially after receiving a [[blow]] to the [[head]].
+#* '''1868''', [[w:Louisa May Alcott|Louisa May Alcott]], ''Little Women'', ch. 43:
+#*: Of course they bumped their heads smartly together, '''saw stars''', and both came up flushed and laughing, without the ball, to resume their seats, wishing they had not left them.
+#* '''1995''', [[w:Michael Crichton|Michael Crichton]], "[http://www.time.com/time/magazine/article/0,9171,983488,00.html Arts & Media: Excerpt from ''Jurassic Park: The Lost World'']," ''Time'', 25 Sept.:
+#*: Malcolm hit his head and fell to the floor, '''seeing stars'''.
+#* '''2009''', William C. Rhoden, "[http://www.nytimes.com/2009/02/10/sports/football/10rhoden.html?em A Hall of Fame Linebacker Turns 50]," ''New York Times'', 9 Feb. (retrieved 26 Sep 2010):
+#*: During his 13-year career as a game-changing NFL linebacker , Lawrence Taylor hit opponents so hard he often made them '''see stars'''.
 
 [[fr:see stars]]
