--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -37,11 +37,11 @@
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}
 * German: {{t+|de|Wiesel|n}}
-* Greek: {{t+|el|νυφίτσα}} (nifítsa) {{f}}
-* Hebrew: [[סמור]] (samur)
+* Greek: {{t+|el|νυφίτσα|tr=nifítsa|f|sc=Grek}}
+* Hebrew: {{t|he|סמור|sc=Hebr|tr=samur}}
 * Hungarian: {{t+|hu|menyét}}
 {{trans-mid}}
-* Irish: [[blathnaid ghallda]] {{f}}, {{t|ga|bláthnaid ghallda|f}}
+* Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
 * Japanese: {{t+|ja|飯綱}} (いいずな) (īzuna)
 * Korean: {{t-|ko|족제비|sc=Hang}} (jokjebi)
