Added Category:Appalachian English <polecat#10567729>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -91,6 +91,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 * [[colpate#English|colpate]]
 
 [[Category:Mammals]]
+[[Category:Appalachian English]]
 
 [[io:polecat]]
 [[lt:polecat]]
