--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -35,7 +35,7 @@
 #:* The '''pig''' was cracked, and molten metal was oozing from the side.
 # {{engineering}} A device for cleaning or inspecting the inside of an oil or gas [[pipeline]], or for separating different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 #:* Unfortunately, the '''pig''' sent to clear the obstruction got lodged in a tight bend, adding to the problem.
-# {{pejorative}} a morbidly obese person
+# {{pejorative}} a person who is obese to the extent of resembling such an animal as defined in definition 1.
 # {{UK}} a [[pigeon]].
 
 ====Translations====
