--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -397,6 +397,7 @@ From {{etyl|en|tcs}} ''[[heart]]''.
 From {{etyl|otk|tr}} ''at'', from {{proto|Turkic|at|lang=tr}}.
 
 ===Pronunciation===
+* {{IPA|/ät̪/|lang=tr}}
 * {{audio|Tur-at.ogg|audio}}
 
 ===Noun===
