+gd sect <sir#10610021>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -108,6 +108,18 @@
 
 ----
 
+==Scottish Gaelic==
+
+===Verb===
+{{infl|gd|verb|verbal noun|sireadh}}
+
+# [[seek]], [[search]], [[look for]]
+
+====Synonyms====
+* {{l|gd|lorg}}
+
+----
+
 ==Serbo-Croatian==
 
 ===Etymology===
