t+ro:[[Peninsula Balcanică]] ([[WT:EDIT|Assisted]]) <Balkans#10615047>

--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -36,7 +36,7 @@ Used with the definite article {{term|the}}.
 * [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t-|pt|Balcãs|m|p}}
-* Romanian: {{t-|ro|Balcani|m|p}}
+* Romanian: {{t-|ro|Balcani|m|p}}, {{t|ro|Peninsula Balcanică|f}}
 * Russian: {{t-|ru|Балканы|m|p|tr=Balkány}}
 * Turkish: {{t+|tr|Balkanlar|p}}
 {{trans-bottom}}
