iwiki +[[:pl:bubble]] <bubble#10616722>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -181,6 +181,7 @@ Partly imitative, also influenced by {{term|burble}}.
 [[ml:bubble]]
 [[my:bubble]]
 [[nl:bubble]]
+[[pl:bubble]]
 [[pt:bubble]]
 [[ru:bubble]]
 [[fi:bubble]]
