iwiki +[[:pl:ermine]] <ermine#10616784>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -133,6 +133,7 @@ From {{etyl|fro}} {{term|ermine|(h)ermine|lang=fro}}, either from {{etyl|ML.}} {
 [[it:ermine]]
 [[hu:ermine]]
 [[ja:ermine]]
+[[pl:ermine]]
 [[ro:ermine]]
 [[ru:ermine]]
 [[ta:ermine]]
