--- a/en/b/Bosphorus.776975.wikitext
+++ b/en/b/Bosphorus.776975.wikitext
@@ -54,7 +54,7 @@
 {{trans-mid}}
 * [[Karakalpak]]: {{tø|kaa|Bosfor}}
 * Korean: [[보스포루스 해협]] (boseuporuseu haehyeop)
-* Kurdish: [[Tengava Stenbol]], {{t|ku|Tengava Stenbolê|sc=ku-Arab}}, {{t|ku|Bosfor|sc=ku-Arab}}
+* Kurdish: {{t|ku|Tengava Stenbolê}}, {{t|ku|Bosfor}}
 * Latin: {{t|la|Bosporus}}
 * Latvian: {{t|lv|Bosfors}}
 * Lithuanian: [[Bosforo sąsiauris]], {{t|lt|Bosforas}}
