--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -59,6 +59,21 @@ From {{term|multus||much, many|lang=la}} + {{term|color||color|lang=la}}.
 ===References===
 * {{R:L&S}}
 
+----
+
+==Spanish==
+
+===Etymology===
+From Latin.
+
+===Adjective===
+{{es-adj|pl=multicolores}}
+
+# [[varicolored]] (''US''), [[varicoloured]] (''UK'')
+
+====Synonyms====
+* [[policromo]]
+
 [[el:multicolor]]
 [[fr:multicolor]]
 [[pl:multicolor]]
