--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|enm}} {{term|pigge|lang=enm}} 'pig, piglet', from {{etyl|ang}} {{term||picga}} (attested only in compounds, like {{term|picgbread|lang=ang|picgbrēad}} 'mast, pig's food'), pet-form related to Dutch {{term|big|lang=nl}} 'piglet', West Frisian {{term|bigge|lang=fy}}. Of uncertain origin.
+{{etyl|enm}} {{term|pigge|lang=enm}} 'pig, piglet', from {{etyl|ang}} {{term||picga}} (attested only in compounds, like {{term|picgbread|lang=ang|picgbrēad}} 'mast, pig's food'), pet-form related to Low German {{term|Pugge|lang=nds}} 'pet pig'. Of uncertain origin.
 
 ===Pronunciation===
 * {{IPA|/pɪɡ/}}
