iwiki +[[:es:metallurgist]] <metallurgist#10669818>

--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -18,6 +18,7 @@
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
 {{trans-bottom}}
 
+[[es:metallurgist]]
 [[ta:metallurgist]]
 [[te:metallurgist]]
 [[vi:metallurgist]]
