iwiki +[[:ku:mill]] <mill#10687508>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -291,6 +291,7 @@ From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
 [[it:mill]]
 [[kn:mill]]
 [[kk:mill]]
+[[ku:mill]]
 [[la:mill]]
 [[hu:mill]]
 [[ml:mill]]
