iwiki +[[:ta:lunar occultation]] <lunar occultation#10732554>

--- a/en/l/lunar occultation.855154.wikitext
+++ b/en/l/lunar occultation.855154.wikitext
@@ -5,3 +5,5 @@
 {{en-noun|sg=[[lunar]] [[occultation]]}}
 
 # {{astronomy}} The passage of the [[Moon]], as it moves through the nighttime sky, in front of a [[celestial]] object, such as a [[star]] or [[planet]].
+
+[[ta:lunar occultation]]
