--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -31,7 +31,7 @@
 ==German==
 
 ===Etymology===
-{{etyl|goh|de}} {{term|bitten|lang=goh}}, originally {{term|biddan|lang=de}}.
+From {{etyl|goh|de}} {{term|bitten|lang=goh}} < {{proto|Germanic|bidjanan|lang=de}}.
 
 ===Pronunciation===
 * {{audio|De-at-bitten.ogg|audio (Austria)}}
@@ -49,12 +49,12 @@
 ==Old High German==
 
 ===Etymology===
-{{proto|Germanic|bidjanan|lang=goh}}, whence also Old English {{term|biddan|lang=ang}}, Old Norse {{term|biðja|lang=non}}.
+From {{proto|Germanic|bidjanan|lang=goh}}, whence also Old English {{term|biddan|lang=ang}}, Old Norse {{term|biðja|lang=non}}.
 
 ===Verb===
 {{infl|goh|verb}}
 
-# To [[ask]].
+# to [[ask]]
 
 [[br:bitten]]
 [[cs:bitten]]
