iwiki +[[:ta:basal metabolic rate]], -{{count page}} <basal metabolic rate#10788624>

--- a/en/b/basal metabolic rate.741293.wikitext
+++ b/en/b/basal metabolic rate.741293.wikitext
@@ -11,4 +11,5 @@
 * Czech: {{t-|cs|bazální metabolismus|m}}
 {{trans-mid}}
 {{trans-bottom}}
-{{count page|[[Wiktionary:Page count]]}}
+
+[[ta:basal metabolic rate]]
