Reverted edits by [[Special:Contributions/219.248.127.230|219.248.127.230]] ([[User_talk:219.248.127.230|Talk]]); changed back to last version by [[User:Btouburg|Btouburg]] <bend#10809434>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -30,6 +30,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 #: ''He '''bent''' company's resources to gaining market share.''
 # {{intransitive}} To apply oneself to a task or purpose.<!--state?,activity-->
 #: ''He '''bent''' to the goal of gaining market share.''
+# {{transitive}} To adapt or interpret to for a purpose or beneficiary.<!--accomplishment-->
 # {{transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].<!--accomplishment,achievement-->
 #: '''''Bend''' the sail to the yard.''
 # {{transitive|music}} To smoothly change the pitch of a note.<!--activity,accomplishment-->
