t+bs:[[nabrojati]] ([[WT:EDIT|Assisted]]) <enumerate#10813148>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|To specify each member of a sequence individually in incrementing order}}
+* Bosnian: {{t|bs|nabrojati}}
 * Dutch: {{t|nl|uittellen}}
 * Finnish: {{t-|fi|luetella}}
 {{trans-mid}}
