iwiki +[[:eo:thing]] <thing#10814449>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -236,6 +236,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 [[et:thing]]
 [[el:thing]]
 [[es:thing]]
+[[eo:thing]]
 [[fr:thing]]
 [[ko:thing]]
 [[hy:thing]]
